# raytracer

./: .gitignore  CMakeLists.txt  README.md  input  readme-how-to-compile.txt  renders
source-files/: BMP.hpp  BMPhandler.cpp  BMPwriter.cpp  canvas.hpp  canvasHandler.cpp  main.cpp  postProcess.hpp  postProcessing.cpp  rayTracer.cpp  rays.hpp  scene.hpp  sceneDefinition.cpp  vector.hpp  vectorMath.cpp
